// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-avatar css-6y3e8p"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-8o2ae8"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a border 1`] = `
<div
  class="wp-components-avatar css-1ocb9ff"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-8o2ae8"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;

exports[`props should render with a custom color 1`] = `
<div
  class="wp-components-avatar css-qcoqpe"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-32gu8g"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;

exports[`props should render with a custom size 1`] = `
<div
  class="wp-components-avatar css-35zl2u"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-1j3613t"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a custom small size + square 1`] = `
<div
  class="wp-components-avatar css-1naj0gq"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-1g8a9bf"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a custom xSmall size + square 1`] = `
<div
  class="wp-components-avatar css-1ka3zj6"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-19qhcq0"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with an alternate shape 1`] = `
<div
  class="wp-components-avatar css-17mz7p6"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-32gu8g"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;

exports[`props should render with an alternate size 1`] = `
<div
  class="wp-components-avatar css-1pj9r2w"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-1j3613t"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with animateOnImageLoad disabled 1`] = `
<div
  class="wp-components-avatar css-6y3e8p"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-8o2ae8"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;

exports[`props should render with image src 1`] = `
<div
  class="wp-components-avatar css-6y3e8p"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="css-qze8kw"
  >
    <div
      class="wp-components-text wp-components-initials css-8o2ae8"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-fvkpkj"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-j4t0j6"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-v1plal"
    />
  </div>
</div>
`;
